--- a/practice.css
+++ b/practice.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-
+    overflow-y: hidden;
 }
 .bin {
     width: 100vw;
@@ -12,6 +12,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+   
 }
    
 .logo {
