Changes to be committed: 	new file:   .vscode/settings.json 	modified:   assignment.css 	new file:   cart-icon-28351.png 	new file:   class work.css 	new file:   class work.html 	new file:   computer.jpg 	new file:   computer.rar 	new file:   home.png 	new file:   i1mages.png 	new file:   iconmonstr-menu-9-240.png 	new file:   iconsss.png 	new file:   igmages.png 	new file:   imgages.png 	modified:   index.html 	new file:   java.js 	new file:   known.css 	new file:   known.html 	new file:   known.js 	new file:   menu.png 	modified:   new file.css 	modified:   new file.html 	new file:   new.js 	new file:   now.js 	modified:   orji.png 	new file:   recommendations-featured_image.width-720.jpg 	new file:   replacement.css 	new file:   replacement.html 	modified:   style.css 	new file:   white-menu-icon-2.jpg

--- a/assignment.css
+++ b/assignment.css
@@ -86,6 +86,33 @@ body {
     grid-template-columns: 0.1fr 0.4fr 0.2fr 0.3fr 0.5fr;
     grid-template-rows: 0.3fr 0.1fr 0.15fr 0.15fr 0.05fr;
     overflow: hidden;
+    animation-name: movement;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    animation-iteration-count: 10;
+   }
+   @keyframes movement {
+     0% {
+      height: 80vh;
+    width: 0px;
+    right: 0px;
+    top: 60vh;
+
+     }
+
+     50% {
+      height: 80vh;
+    width: 70vw;
+    left: 15px;
+    top: 60vh;
+     }
+     100% {
+      height: 80vh;
+    width: 0px;
+    right: 0px;
+    top: 60vh;
+
+     }
    }
    .box {
     height: 100%;
