--- a/style.css
+++ b/style.css
@@ -1,90 +1,339 @@
+* {
+   box-sizing: border-box;
+   overflow-x: hidden;
+}
+
 body {
-    margin: 0px;
+   margin: 0px;
+}
+
+.logobox {
+   height: 8vh;
+   width: 15vw;
+   margin-left: 7vw;
+}
+
+nav {
+   width: 100%;
+   height: 15vh;
+   background-color: rgb(3, 3, 3);
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding-top: 0.5rem;
+   padding-bottom: 0.5rem;
 
 }
- 
- .logo {
-     height: 80px;
-     width: 200px;
-     margin-left: 50px;
-    
-    
-     
- }
- .styling {
-     top: 0px;
-     right: 0px;
-     left: 0px;
-     
-     padding-left: 0px;
-     background-color: black;
-    position: fixed;
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
- 
- }
- 
- 
- 
- li {
-    display: inline;
-   
 
- }
- li a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family: Verdana,sans-serif;
-    font-size: 15px;
-    }
-    li a:hover {
-      color:gold;
-    }
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        margin-right: 70px;
-    }
-    
-    
-    section {
-        display: block;
-      
-        
-    }
-    .bin {
-        margin: 0px;
-        width: 100vw;
-        height: 100vh;
-        background-image:linear-gradient(90deg,rgba(17, 16, 17, 0.411), rgba(164, 152, 235, 0.404)),
-         url(/download.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: scroll;
-        background-position: center ;
 
-    }
-    .PROJECT {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-       margin-top: 100px;
-        margin-left: 250px;
-        color: white;
-        position: absolute;
-        font-family: 'Arial Narrow Bold';
-        
-        }
-       
-       H1 {
-        font-size: 100px;
-        margin-bottom: 0px;
-       }
-       H3 {
-        font-size: 50px;
-        margin-top: 2px;
-        margin-bottom: 0.5px;
-       }
+
+li a {
+
+   display: block;
+   font-size: 20px;
+   font-weight: 400;
+   color: gold;
+   text-decoration: none;
+   font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+   margin-right: 15px;
+
+}
+
+li :hover {
+   color: white;
+}
+
+ul {
+   margin-right: 10vw;
+   padding: 0px;
+   display: flex;
+   width: 25vw;
+   justify-content: space-between;
+}
+
+ul * {
+   margin: 0px;
+   padding: 0px;
+   list-style: none;
+}
+
+.menu_img {
+   width: 50px;
+   display: none;
+}
+
+.bin {
+   margin: 0px;
+   width: 100vw;
+   height: 80.4vh;
+   background-image: linear-gradient(90deg, rgba(17, 16, 17, 0.411), rgba(164, 152, 235, 0.404)),
+      url(/recommendations-featured_image.width-720.jpg);
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-attachment: scroll;
+   background-position: center;
+
+}
+
+.PROJECT {
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+   margin-top: 25vh;
+   margin-left: 30vw;
+   color: white;
+   position: absolute;
+
+   font-family: 'Arial Narrow Bold';
+
+}
+
+H1 {
+   font-size: 68.1px;
+   font-weight: bold;
+   margin-bottom: 0px;
+   font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+
+H3 {
+   font-size: 41.28px;
+   font-weight: normal;
+   margin-top: 2px;
+   margin-bottom: 0.5px;
+   font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+
+.set {
+   margin-left: 41%;
+   margin-top: 10%;
+   font-size: 50px;
+}
+
+.cart {
+   position: relative;
+
+   margin-top: 10%;
+
+   height: 18vh;
+   width: 9vw;
+   margin-bottom: 2px;
+}
+
+.ok {
+   margin-top: 2px;
+
+   font-size: 30px;
+   font-weight: 700;
+}
+
+.ko {
+
+   font-size: 20px;
+   font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+   color: gray;
+}
+
+.can {
+   margin-top: 8.7%;
+   margin-bottom: 0%;
+
+   height: 17vh;
+   width: 11vw;
+}
+
+.arr {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-evenly;
+   text-align: center;
+}
+
+.ook {
+   font-size: 30px;
+   font-weight: 700;
+   margin-top: 2%;
+}
+
+.koo {
+   font-size: 20px;
+   font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+   color: gray;
+}
+
+
+
+
+@media(max-width: 700px) {
+   * {
+      box-sizing: border-box;
+
+   }
+
+   body {
+      margin: 0px;
+   }
+
+   .logobox {
+      height: 12vw;
+      width: 35vw;
+      margin-left: 20px;
+   }
+
+   nav {
+      height: 10vh;
+      background-color: rgb(3, 3, 3);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      box-sizing: border-box;
+   }
+
+   .menu_img {
+      margin-right: 7%;
+      width: 10vw;
+      height: 10vw;
+   }
+
+   li a {
+
+      display: block;
+      font: 15px bold;
+      color: gold;
+      text-decoration: none;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+   }
+
+   li a :hover {
+      color: white;
+   }
+
+   .menu_img {
+      display: block;
+   }
+
+   ul {
+      display: none;
+   }
+
+   .ul {
+      height: 10vh;
+   }
+
+   .ul {
+      display: flex;
+      position: fixed;
+      top: 12vh;
+      width: 100vw;
+      height: 20vh;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      background-color: rgb(53, 53, 9);
+      left: 0px;
+
+   }
+
+
+
+   .bin {
+      margin: 0px;
+      width: 100%;
+      background-image: linear-gradient(90deg, rgba(17, 16, 17, 0.411), rgba(164, 152, 235, 0.404)),
+         url(/recommendations-featured_image.width-720.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: scroll;
+      background-position: center;
+
+   }
+
+   .PROJECT {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      margin-top: 10vh;
+      margin-left: 7vw;
+      color: white;
+      position: absolute;
+
+      font-family: 'Arial Narrow Bold';
+
+   }
+
+   H1 {
+      font-size: 50px;
+      margin-bottom: 0px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: auto;
+   }
+
+   H3 {
+      font-size: 45px;
+      margin-top: 2px;
+      margin-bottom: 0.5px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: auto;
+   }
+
+   .set {
+      margin-left: 25vw;
+      margin-top: 10%;
+      font-size: 40px;
+
+   }
+
+   .cart {
+      position: relative;
+
+      margin-top: 10%;
+
+      height: 18vh;
+      width: 35vw;
+      margin-bottom: 2px;
+   }
+
+   .ok {
+      margin-top: 2px;
+
+      font-size: 30px;
+      font-weight: 700;
+   }
+
+   .ko {
+
+      font-size: 20px;
+      font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+      color: gray;
+   }
+
+   .can {
+      margin-top: 8.7%;
+      margin-bottom: 0%;
+
+      height: 17vh;
+      width: 35vw;
+   }
+
+   .arr {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      text-align: center;
+   }
+
+   .ook {
+      font-size: 30px;
+      font-weight: 700;
+      margin-top: 2%;
+   }
+
+   .koo {
+      font-size: 20px;
+      font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+      color: gray;
+   }
+
+}
