--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ nav {
    justify-content: space-between;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
+   position: fixed;
+   z-index: 2;
 
 }
 
@@ -65,7 +67,7 @@ ul * {
 .bin {
    margin: 0px;
    width: 100vw;
-   height: 80.4vh;
+   height: 100vh;
    background-image: linear-gradient(90deg, rgba(17, 16, 17, 0.411), rgba(164, 152, 235, 0.404)),
       url(/recommendations-featured_image.width-720.jpg);
    background-repeat: no-repeat;
@@ -93,6 +95,7 @@ H1 {
    font-weight: bold;
    margin-bottom: 0px;
    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+   z-index: 1;
 }
 
 H3 {
@@ -101,6 +104,7 @@ H3 {
    margin-top: 2px;
    margin-bottom: 0.5px;
    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+   z-index: 1;
 }
 
 .set {
@@ -177,20 +181,174 @@ H3 {
    color: gray;
 }
 
-.real {
-
-   width: 100vw;
-   height: 80.4vh;
-   background-image: linear-gradient(90deg, rgba(79, 75, 79, 0.411)),
-      url(/recommendations-featured_image.width-720.jpg);
+.contact {
+   background-image: url('vector-dotted-world-map-illustration.jpg');
+   Background-color: #212529;
    background-repeat: no-repeat;
    background-size: cover;
-   background-attachment: scroll;
    background-position: center;
+   box-sizing: border-box;
+   height: 100%;
+   width: 100%;
+   margin-top: 20%;
+}
+
+.row {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   text-align: center;
+   width: 92%;
+   margin-left: 4rem;
+   margin-top: 1rem;
+
 
 }
 
-@media(max-width: 700px) {
+.con {
+   color: white;
+   font-size: 60px;
+   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+   margin-top: 10%;
+
+}
+
+.sui {
+   width: 100%;
+   margin-top: 2%;
+}
+
+form {
+   display: flex;
+}
+
+.sont {
+   padding: 0 15px;
+
+
+
+}
+
+.box {
+   margin-bottom: 1rem;
+
+
+}
+
+.pass {
+   height: 4.5rem;
+   padding: 20px;
+   display: flex;
+   justify-items: center;
+   text-align: center;
+   width: 30rem;
+   padding: 0.375rem 0.75rem;
+   font-size: 1.5rem;
+   font-weight: 400;
+   line-height: 1.5;
+   color: #212529;
+   background-color: #fff;
+   border: 1px solid #dfe2e6;
+   border-radius: 0.25rem;
+   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+
+}
+
+.passt {
+   height: 17rem;
+   padding: 20px;
+   display: flex;
+   justify-items: center;
+   text-align: center;
+   width: 35rem;
+   padding: 0.375rem 0.75rem;
+   font-size: 1.5rem;
+   font-weight: 400;
+   color: #212529;
+   background-color: #fff;
+   border: 1px solid #dfe2e6;
+   border-radius: 0.25rem;
+   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+
+}
+
+
+
+.toper {
+   display: inline;
+
+   justify-self: center;
+   height: fit-content;
+   width: fit-content;
+
+
+}
+
+.btn {
+   margin-top: 1.5rem;
+   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-weight: 700;
+   color: #fff;
+   background-color: #fed136;
+   border-color: #fed136;
+   font-size: 18px;
+   padding: 20px 40px;
+   border-radius: 0.25rem;
+   text-decoration: none;
+
+}
+
+button:not(:disabled),
+[type=button]:not(:disabled),
+[type=reset]:not(:disabled),
+[type=submit]:not(:disabled) {
+   cursor: pointer;
+}
+
+footer {
+   text-align: center;
+   height: 15%;
+
+}
+
+.container {
+   width: 100%;
+
+}
+
+.rin {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-evenly;
+   align-items: center;
+   margin-top: 1%;
+}
+
+.end ul {
+   justify-content: center;
+}
+
+
+
+li a img {
+   display: inline;
+   height: 40px;
+   width: 40px;
+}
+
+.copyright {
+   font-size: 95%;
+   text-transform: none;
+   color: #b7babd;
+   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+
+
+@media(max-width: 760px) {
    * {
       box-sizing: border-box;
 
@@ -267,7 +425,8 @@ H3 {
 
    .bin {
       margin: 0px;
-      width: 100%;
+      width: 100vw;
+      height: 80vh;
       background-image: linear-gradient(90deg, rgba(17, 16, 17, 0.411), rgba(164, 152, 235, 0.404)),
          url(/recommendations-featured_image.width-720.jpg);
       background-repeat: no-repeat;
@@ -307,9 +466,11 @@ H3 {
       margin: auto;
    }
 
+
+
    .set {
-      margin-left: 27%;
-      margin-top: 10%;
+      margin-top: 15%;
+      margin-left: 23%;
       font-size: 50px;
 
    }
@@ -320,7 +481,7 @@ H3 {
       margin-top: 10%;
 
       height: 18vh;
-      width: 35vw;
+      width: 40vw;
       margin-bottom: 2px;
    }
 
@@ -343,7 +504,7 @@ H3 {
       margin-bottom: 0%;
 
       height: 17vh;
-      width: 35vw;
+      width: 40vw;
    }
 
    .arr {
@@ -365,8 +526,10 @@ H3 {
       color: gray;
    }
 
+
+
    .save {
-      margin-left: 33%;
+      margin-left: 30%;
       margin-top: 15%;
       font-size: 50px;
    }
@@ -382,6 +545,177 @@ H3 {
       color: rgb(92, 87, 87);
 
    }
+
+   .contact {
+      background-image: url('vector-dotted-world-map-illustration.jpg');
+      Background-color: #212529;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      box-sizing: border-box;
+      height: 110%;
+      width: 100%;
+      margin-top: 20%;
+   }
+
+
+   .row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      text-align: center;
+      width: 92%;
+      margin-left: 1rem;
+      margin-right: 1rem;
+      margin-top: 1rem;
+
+
+
+   }
+
+   .con {
+      color: white;
+      font-size: 60px;
+      font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      margin-top: 10%;
+
+
+   }
+
+   .sui {
+      width: 100%;
+      margin-top: 2%;
+      height: 98%;
+   }
+
+   form {
+      display: flex;
+   }
+
+   .sont {
+      padding: 0 15px;
+   }
+
+   .box {
+      margin-bottom: 1rem;
+   }
+
+   .pass {
+      height: 3.5rem;
+      padding: 20px;
+      display: flex;
+      justify-items: center;
+      text-align: center;
+      width: 20rem;
+      padding: 0.375rem 0.75rem;
+      font-size: 1.5rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #212529;
+      background-color: #fff;
+      border: 1px solid #dfe2e6;
+      border-radius: 0.25rem;
+      font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+   }
+
+   .passt {
+      height: 12rem;
+      padding: 20px;
+      display: flex;
+      justify-items: center;
+      text-align: center;
+      width: 18.2rem;
+      padding: 0.375rem 0.75rem;
+      font-size: 1.5rem;
+      font-weight: 400;
+      color: #212529;
+      background-color: #fff;
+      border: 1px solid #dfe2e6;
+      border-radius: 0.25rem;
+      font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+
+   }
+
+
+
+   .toper {
+      display: inline;
+      justify-self: center;
+      height: fit-content;
+      width: fit-content;
+
+
+   }
+
+   .btn {
+      margin-top: 1.5rem;
+      font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-weight: 700;
+      color: #fff;
+      background-color: #fed136;
+      border-color: #fed136;
+      font-size: 17px;
+      padding: 20px 40px;
+      border-radius: 0.25rem;
+      text-decoration: none;
+   }
+
+   button:not(:disabled),
+   [type=button]:not(:disabled),
+   [type=reset]:not(:disabled),
+   [type=submit]:not(:disabled) {
+      cursor: pointer;
+   }
+
+   footer {
+      text-align: center;
+      height: 15%;
+
+   }
+
+   .container {
+      width: 100%;
+   }
+
+   .saan {
+      display: flex;
+      width: 100%;
+   }
+
+   .rin {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-top: 1%;
+   }
+
+   .end {
+      justify-content: center;
+
+   }
+
+   li a img {
+      display: inline;
+      margin-left: 5%;
+      height: 40px;
+      width: 40px;
+   }
+
+   .copyright {
+      font-size: 1rem;
+      text-transform: none;
+      color: #8d8f91;
+      font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+   }
+
+   .end i {
+      display: none;
+   }
+
+
+
 
 
 
