--- a/style.css
+++ b/style.css
@@ -697,7 +697,8 @@ li a img {
 
    li a img {
       display: inline;
-      margin-left: 5%;
+      margin-left: 1%;
+      margin-right: 5%;
       height: 40px;
       width: 40px;
    }
